tests/samples/negative/types/bcast_u8_from_bool.ax
module bcast_u8_from_bool;

fn main() -> i32 {
    let value: u8 = bcast(u8, true);
    return cast(i32, value);
}
